[package]
name = "sea-strum_macros"
version = "0.24.3"
edition = "2018"
authors = ["Peter Glotfelty <peter.glotfelty@microsoft.com>"]
license = "MIT"

description = "Helpful macros for working with enums and strings"
keywords = ["enum", "string", "macros", "proc-macros"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = "https://docs.rs/sea-strum"
homepage = "https://github.com/SeaQL/strum"
repository = "https://github.com/SeaQL/strum"
readme = "../README.md"

[lib]
proc-macro = true
name = "strum_macros"

[dependencies]
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
rustversion = "1.0"
syn = { version = "1.0", features = ["parsing", "extra-traits"] }

[dev-dependencies]
strum = "0.24"

[features]
sea-orm = []