[package]
name = "strum_nostd_tests"
version = "0.23.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-strum = { path = "../strum", features = ["derive"] }
sea-strum_macros = { path = "../strum_macros", features = [] }

[dev-dependencies]
rustversion = "1.0"